--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <title>Hotspot Ratespiel 🦎</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: Arial; background:#101820; color:#fff; text-align:center; padding:40px; }
+    input,button { padding:10px; border-radius:8px; margin:5px; width:200px; }
+    .box { background:#1e293b; display:inline-block; padding:30px; border-radius:12px; }
+    .secret { font-family: monospace; background:#000; padding:6px; border-radius:8px; }
+  </style>
+</head>
+<body>
+  <div class="box">
+    <h1>🔥 Hotspot Zahlenspiel 🔥</h1>
+    <p>Errate die Zahl zwischen 1 und 50!</p>
 
+    <p id="info">Lade Einstellungen…</p>
+    <input id="guessInput" type="number" min="1" max="50" placeholder="Zahl eingeben">
+    <button id="guessBtn">Raten</button>
+
+    <p id="result"></p>
+    <div id="passwordBox" style="display:none; margin-top:15px;">
+      🎉 Dein Hotspot-Passwort: <span class="secret" id="pw"></span>
+    </div>
+  </div>
+
+  <script type="module">
+    // 🔹 Firebase Config einfügen (gleich wie Adminseite)
+    const firebaseConfig = {
+      apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
+      authDomain: "zahlenerraten.firebaseapp.com",
+      databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "zahlenerraten",
+      storageBucket: "zahlenerraten.firebasestorage.app",
+      messagingSenderId: "143969932071",
+      appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
+      measurementId: "G-KP89LYZJMT"
+    };
+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    const info = document.getElementById("info");
+    const guessInput = document.getElementById("guessInput");
+    const guessBtn = document.getElementById("guessBtn");
+    const result = document.getElementById("result");
+    const passwordBox = document.getElementById("passwordBox");
+    const pw = document.getElementById("pw");
+
+    let randomNumber = Math.floor(Math.random() * 50) + 1;
+    let attemptsLeft = 0;
+    let password = "";
+
+    async function loadSettings() {
+      const snapshot = await get(child(ref(db), "settings"));
+      if(snapshot.exists()){
+        const data = snapshot.val();
+        attemptsLeft = data.maxAttempts || 6;
+        password = data.password || "";
+        info.textContent = `Du hast ${attemptsLeft} Versuche! 😎`;
+      } else {
+        info.textContent = "⚠️ Einstellungen nicht gefunden.";
+      }
+    }
+
+    await loadSettings();
+
+    guessBtn.onclick = () => {
+      const guess = Number(guessInput.value);
+      if(!guess || guess < 1 || guess > 50){
+        result.textContent = "⚠️ Gib eine Zahl zwischen 1 und 50 ein!";
+        return;
+      }
+
+      attemptsLeft--;
+
+      if(guess === randomNumber){
+        result.textContent = "✅ Richtig geraten!";
+        pw.textContent = password;
+        passwordBox.style.display = "block";
+        guessBtn.disabled = true;
+        guessInput.disabled = true;
+      } else if(attemptsLeft <= 0){
+        result.textContent = `❌ Keine Versuche mehr! Die Zahl war ${randomNumber}.`;
+        guessBtn.disabled = true;
+        guessInput.disabled = true;
+      } else {
+        result.textContent = guess > randomNumber ? "📉 Zu hoch!" : "📈 Zu niedrig!";
+        info.textContent = `Noch ${attemptsLeft} Versuche`;
+      }
+    };
+  </script>
+</body>
+</html>
