index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <script type="module">
-    // 🔹 Firebase Config einfügen (gleich wie Adminseite)
+    // 🔹 Firebase Config hier einfügen
     const firebaseConfig = {
       apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
       authDomain: "zahlenerraten.firebaseapp.com",
